test/compile-errors/type-param-cant-have-type-args.crow
main nat64^(_ string[])
	()

f[t] void(_ nat t)
	()
